@@ -1,3 +1,6 @@
+- add grub entries to allow booting other installed distros
+  (using grub "configfile") (see #16604)
+
 Version 10.6.10 - 28 January 2008
 
 - handle new drivers: 
